--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     
+    env:
+      AWS_ACCOUNT_ID: ${{ vars.AWS_ACCOUNT_ID }}
+      AWS_REGION: ${{ vars.AWS_REGION }}
+      AWS_PARTITION: ${{ vars.AWS_PARTITION }}
+      BUCKET_NAME: ${{ vars.BUCKET_NAME }}
+      ORG_REPO: ${{ vars.ORG_REPO }}
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -22,8 +29,8 @@ jobs:
       - name: Configure AWS credentials via OIDC
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws-us-gov:iam::514397112278:role/project/project-my-test-repo-role
-          aws-region: us-gov-west-1
+          role-to-assume: arn:${{ env.AWS_PARTITION }}:iam::${{ env.AWS_ACCOUNT_ID }}:role/project/project-github-actions-deploy-role
+          aws-region: ${{ env.AWS_REGION }}
           # Optional: specify role session name for audit trail
           role-session-name: GitHubActions-${{ github.event.repository.name }}-${{ github.run_id }}
       
@@ -37,10 +44,10 @@ jobs:
         run: |
           # Upload to S3 with metadata
           aws s3 cp source.zip \
-            s3://github-pipeline-artifacts-us-gov-west-1-514397112278/matt-e-builds-my-test-repo/main/latest.zip \
+            s3://${BUCKET_NAME}/${ORG_REPO}/main/latest.zip \
             --metadata "commit-sha=${{ github.sha }},branch=${{ github.ref_name }},actor=${{ github.actor }}"
           
-          echo "✅ Uploaded to S3: s3://BUCKET_NAME/ORG-REPO/main/latest.zip"
+          echo "✅ Uploaded to S3: s3://${BUCKET_NAME}/${ORG_REPO}/main/latest.zip"
           echo "Commit: ${{ github.sha }}"
           echo "Branch: ${{ github.ref_name }}"
           echo "Triggered by: ${{ github.actor }}"
