--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,7 @@ jobs:
       AWS_PARTITION: ${{ vars.AWS_PARTITION }}
       BUCKET_NAME: ${{ vars.BUCKET_NAME }}
       ORG_REPO: ${{ vars.ORG_REPO }}
+      ROLE_NAME: ${{ vars.ROLE_NAME != '' && vars.ROLE_NAME || 'project-github-actions-deploy-role' }}
     
     steps:
       - name: Checkout code
@@ -29,7 +30,7 @@ jobs:
       - name: Configure AWS credentials via OIDC
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:${{ env.AWS_PARTITION }}:iam::${{ env.AWS_ACCOUNT_ID }}:role/project/project-github-actions-deploy-role
+          role-to-assume: arn:${{ env.AWS_PARTITION }}:iam::${{ env.AWS_ACCOUNT_ID }}:role/project/${{ env.ROLE_NAME }}
           aws-region: ${{ env.AWS_REGION }}
           # Optional: specify role session name for audit trail
           role-session-name: GitHubActions-${{ github.event.repository.name }}-${{ github.run_id }}
